# INF2004_Embedded_SYS_Integration

./: CMakeLists.txt
Barcode/: CMakeLists.txt  IR_DRIVER.c  IR_DRIVER.h  main.c
BarcodeDetection/: CMakeLists.txt  barcode_decoder.c  barcode_decoder.h
GY511/: CMakeLists.txt  buddy4.c
IR/: CMakeLists.txt  IR_DRIVER.c  IR_DRIVER.h  main.c
LineDetection/: CMakeLists.txt  line_follower.c  line_follower.h
LineFollower/: CMakeLists.txt  IR_DRIVER.c  IR_DRIVER.h  linefollower.c  main.c
Motor_Control/: CMakeLists.txt  motor_control.c  motor_control.h
Station2/: CMakeLists.txt  config.h  station2.c
Station2A/: CMakeLists.txt  station2A.c
project/: CMakeLists.txt  FreeRTOSConfig.h  PicoServerMotor.c  WifiMotor.c  WifiMotor.uf2  buddy2.c  lwipopts.h
ultrasonic_driver/: ultrasonic_driver.c  ultrasonic_driver.h
w10_station2/: CMakeLists.txt  w10_station2.c  w10_station2_server.c
w10_station3/: CMakeLists.txt  PicoServer.c  WifiGY511.c  lwipopts_examples_common.h
w13Part1/ConnectionBothWays/: CMakeLists.txt  Car.c  RemoteControl.c  TelemetryServer.c
w13Part1/Driver/: CMakeLists.txt  Car.c  RemoteControl.c
w13Part1/LatestStableTwoWayComms/: Car.c  RemoteControl.c  TelemetryServer.c
w13Part1/UltrasonicRead_MotorRuns/: Car.c
w13Part1/ultrasonic_driver/: CMakeLists.txt  ultrasonic_driver.h
w13Part1/wheel_encoder_driver/: CMakeLists.txt  wheel_encoder_driver.h
w13_integrated/: CMakeLists.txt  Car.c  TelemetryServer.c
w13_integrated/Integrated_No_Ultrasonic/: Car.c  RemoteControl.c  TelemetryServer.c
wheel_encoder_driver/: wheel_encoder_driver.c  wheel_encoder_driver.h
wifi_driver/: CMakeLists.txt  PCServer.c  PicoServer.c  WifiDriver.c  WifiDriver.uf2  WifiGY511.c  lwipopts.h  lwipopts_examples_common.h
